--- a/front/package.json
+++ b/front/package.json
@@ -17,11 +17,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.13.1",
+    "firebase-admin": "^12.4.0",
     "lucide-react": "^0.439.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typesaurus": "^10.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
