--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-router": "^1.46.2",
+    "@typesaurus/react": "^6.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.13.1",
@@ -21,11 +23,14 @@
     "lucide-react": "^0.439.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "typesaurus": "^10.7.0"
   },
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.46.2",
+    "@tanstack/router-plugin": "^1.45.13",
     "@types/node": "^22.5.4",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
