fix: repare setup

--- a/front/package.json
+++ b/front/package.json
@@ -5,53 +5,49 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint-autofix": "eslint src --ext ts,tsx --report-unused-disable-directives --fix",
-    "lint-build": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-router": "^1.46.2",
+    "@typesaurus/react": "^6.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "firebase": "^10.13.1",
-    "firebase-admin": "^12.4.0",
-    "lucide-react": "^0.439.0",
+    "date-fns": "^3.6.0",
+    "firebase": "^10.12.5",
+    "firebase-admin": "^12.3.0",
+    "lucide-react": "^0.419.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.5.2",
+    "react-helmet-async": "^2.0.5",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typesaurus": "^10.7.0"
   },
   "devDependencies": {
-    "@types/node": "^22.5.4",
-    "@types/react": "^18.3.1",
+    "@tanstack/router-devtools": "^1.46.2",
+    "@tanstack/router-plugin": "^1.45.13",
+    "@types/node": "^22.0.2",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.8.0",
-    "@vite-pwa/assets-generator": "^0.2.4",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.20",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.11",
+    "eslint-plugin-react-refresh": "^0.4.7",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "postcss": "^8.4.45",
+    "postcss": "^8.4.40",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.10",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5.2.2",
-    "vite": "^5.2.10",
-    "vite-plugin-pwa": "^0.20.0",
-    "workbox-core": "^7.1.0",
-    "workbox-window": "^7.1.0"
-  },
-  "overrides": {
-    "sharp": "0.32.6",
-    "sharp-ico": "0.1.5"
+    "vite": "^5.3.4"
   }
 }
