--- a/front/firebaseCredentials.example
+++ b/front/firebaseCredentials.example
@@ -1,5 +1,5 @@
-export const FIREBASE_CONFIG ={};
+export const FIREBASE_CONFIG = ;
 
-export const functionsURL = null;
+export const functionsURL = 
 
-export const DB_NAME = null;
+export const DB_NAME = 
