--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.2.1",
     "firebase": "^10.12.5",
     "firebase-admin": "^12.3.0",
     "lucide-react": "^0.419.0",
