docs: write better  readme

--- a/front/firebaseCredentials.example
+++ b/front/firebaseCredentials.example
@@ -1,5 +1,12 @@
-export const FIREBASE_CONFIG = ;
+export const firebaseConfig = {
+apiKey
+authDomain
+projectId
+storageBucket
+messagingSenderId
+appId
+};
 
-export const functionsURL = 
+export const functionsURL = '';
 
-export const DB_NAME = 
+export const DB_NAME = null;
