--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,8 @@
     "@tanstack/react-query": "^5.55.4",
     "@tanstack/react-router": "^1.46.2",
     "@typesaurus/react": "^6.0.1",
+    "@uidotdev/usehooks": "^2.4.1",
+    "@vis.gl/react-google-maps": "^1.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
